[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "named-arrays"
authors = [
    {name = "Roy T. Smart", email = "roytsmart@gmail.com"},
    {name = "Jacob D. Parker", email="jacobdparker@gmail.com"}
]
description = "Numpy arrays with labeled axes, similar to xarray but with support for uncertainties"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "typing_extensions",
    "numpy<2",
    "matplotlib",
    "scipy",
    'astropy',
    "ndfilters",
    "colorsynth==0.1.3",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-split",
]
doc = [
    "pytest",
    "graphviz",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-bibtex",
    "pydata-sphinx-theme",
    "ipykernel",
    "jupyter-sphinx",
    "sphinx-favicon",
    "pooch",
]

[project.urls]
Homepage = "https://github.com/sun-data/named-arrays"
Documentation = "https://named-arrays.readthedocs.io/en/latest"

[tool.setuptools_scm]

[tool.setuptools.package-data]
named_arrays = ["py.typed"]
